--- a/templates/menu.html
+++ b/templates/menu.html
@@ -37,12 +37,10 @@
 		                                                                                                Hot and crusty, it is a perfect compination<br>
 		                                                                                                to all of our dishes.
 	  </p>
-    </header>
 	
     <section class="menu-section">
         <h2 class="section-title">Breads</h2>
-          <div class="item"><span class="item-name">Perikafti</span><span class="item-price">6.00€</span><br><span 
-					class=>Country homemade bread with olive oil, oregano and sea salt</span></div>
+          <div class="item"><span class="item-name">Perikafti</span><span class="item-price">6.00€</span><br><span class=>Country homemade bread with olive oil, oregano and sea salt</span></div>
           <div class="item"><span class="item-name">Garlic bread</span><span class="item-price">3.40€</span></div>
           <div class="item"><span class="item-name">Hot Roll Breads</span><span class="item-price">3.40€</span></div>
         </div> 
@@ -177,12 +175,6 @@
             <div class="item"><span class="item-name">Apple Pie Tart</span><span class="item-price">9.50€</span></div>
          </div>
     </section>
-
-  <nav>
-	  <a href="{{ url_for('food_menu') }}">View Food Menu</a> |
-	  <a href="{{ url_for('drinks_menu') }}">View Drinks Menu</a> |
-	  <a href="{{ url_for('book-table') }}">Book a Table</a>
-  </nav>
 	
 </body>
 </html>
