--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,27 @@
 <body>
 
     <h1>Welcome to Valantina’s Restaurant</h1>
+    <h1>Lardos - Rhodes Since 1987</h1>
+ <p class="intro-text">
+	    From 1987, Valantina's Restaurant,<br>
+	    has been serving delicious traditional dishes.<br>
+	    We always take care with great devation all of our prime materials.<br>
+	    We use exclusively olive oil that we produce from our land<br>
+	    and we select daily from local markets only the most fresh fish<br>
+	    and meat so that you can enjoy a healthy meal full of flavors.<br>
+	    Our family goal is to offer you tasteful memories.<br>
 
-    <a href="/menu" class="button">View Food Menu</a>
-    <a href="/drinks" class="button">View Drinks Menu</a>
+	    We thank yoy for the trust you show us and we would like<br>
+	    to welcome you to an even more delicious voyage.<br>
+
+	    <strong>With great love and respect<br>
+	    Valantina's Family!</strong>
+    </p>
+    
+    <a href="/menu" class="button">View Food Menu</a> |
+    
+    <a href="/drinks" class="button">View Drinks Menu</a> |
+    
     <a href="/reservation" class="button">Book a Table</a>
 
 </body>
