--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link hrel="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
-	
+<body>
     <section class="menu-block light-green">
       <h1 class="restaurant-title">Valantina's Restaurant<br><span class="subtitle">Lardos - Rhodes Restaurant Since 1987</span></h1>
     </section>
