--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,8 @@
 	    to welcome you to an even more delicious voyage.<br>
 
 	    <strong>With great love and respect<br>
-	    Valantina's Family!</strong>
+	             Valantina's Family!<br>
+	    </strong>
     </p>
     
     <a href="/menu" class="button">View Food Menu</a> |
