--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 <body>
 
     <h1>Welcome to Valantina’s Restaurant</h1>
-    <h1>Lardos - Rhodes Since 1987</h1>
+    <h1>Lardos - Rhodes</h1>
+    <h1>>Since 1987</h1>
  <p class="intro-text">
 	    From 1987, Valantina's Restaurant,<br>
 	    has been serving delicious traditional dishes.<br>
