--- a/templates/drinks_menu.html
+++ b/templates/drinks_menu.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1>Valantina's Restaurant</h1>
+    <h1>Beverages & Wines</h1>
     <p class="lang">Μενού Ποτών / Drinks Menu</p>
 
     <div class="category">
