--- a/templates/drinks_menu.html
+++ b/templates/drinks_menu.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
+   <section class="menu-block drinks-background">
     <h1>Valantina's Restaurant</h1>
     <h1>Beverages & Wines</h1>
+   </section>
     <p class="lang">Μενού Ποτών / Drinks Menu</p>
 
     <div class="category">
